--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<button type="submit" style="margin-top: 5px; alignment: right" color="secondary" (click)="getAllData()" mat-raised-button>Reload</button>
+<button type="submit" style="margin-top: 5px; alignment: right" color="secondary" (click)="getAllData()" mat-raised-button>Load Data</button>
 <h1 style="text-align: center">YOUR USER DATA</h1>
 <table style="margin-left: auto; margin-right: auto">
   <tr style="text-align: left">
@@ -6,25 +6,32 @@
     <th>Email</th>
     <th>Roles</th>
   </tr>
-  <tr *ngIf="currentUser">
-    <td>{{currentUser.username}}</td>
-    <td>{{currentUser.email}}</td>
-    <td>{{currentUser.roles}}</td>
+  <tr *ngIf="storeService.getUserInformation()">
+    <td>{{storeService.getUserInformation().username}}</td>
+    <td>{{storeService.getUserInformation().email}}</td>
+    <td>
+      <div *ngFor="let role of storeService.getUserInformation().roles">{{role.name}}</div>
+      </td>
   </tr>
 </table>
-<div *ngIf="isAdmin">
+
+<div *ngIf="storeService.getIsAdmin()" >
 <h1 style="text-align: center; margin-top: 50px">USER DATA OF ALL USERS</h1>
-<table style="margin-left: auto; margin-right: auto">
+<table style="margin-left: auto; margin-right: auto" >
   <tr style="text-align: left">
     <th>Username</th>
     <th>Email</th>
     <th>Roles</th>
   </tr>
-  <tr *ngFor="let user of users">
+  <tr *ngFor="let user of storeService.getAllUserInformation()">
     <td>{{user.username}}</td>
     <td>{{user.email}}</td>
-    <td>{{user.roles.toString()}}</td>
+    <td><div *ngFor="let role of user.roles">{{role.name}},</div></td>
   </tr>
 </table>
 </div>
+
+
+
+
 
