--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,24 @@
-<div id="out">
-  <mat-card id="card">
-    <mat-card-title>Login</mat-card-title>
-    <mat-card-content>
-      <form [formGroup]="form" (submit)="submit()">
-        <p>
-          <mat-form-field appera>
-            <input class="loginInput" type="text" matInput placeholder="Username" formControlName="username">
-          </mat-form-field>
-        </p>
-
-        <p>
-          <mat-form-field>
-            <input class="loginInput" type="password" matInput placeholder="Password" formControlName="password">
-          </mat-form-field>
-        </p>
-        <p *ngIf="isError" class="error">
-          {{ errorMessage }}
-        </p>
-
-        <div class="button">
-          <button type="submit" color="primary" mat-raised-button>Login</button>
-        </div>
-        <a mat-raised-button color="primary" style="margin-top: 5px" routerLink="/register">Register</a>
-      </form>
-    </mat-card-content>
-  </mat-card>
+<h1 mat-dialog-title>Pls Enter Username and Password</h1>
+<div mat-dialog-content [formGroup]="form" style="text-align: center">
+  <p>
+  <mat-form-field>
+    <input class="loginInput" type="text" matInput placeholder="Username" formControlName="username">
+  </mat-form-field>
+  </p>
+  <p>
+  <mat-form-field>
+    <input class="loginInput" type="password" matInput placeholder="Password" formControlName="password">
+  </mat-form-field>
+  </p>
+  <p *ngIf="isError" class="error" style="color: red">
+    {{ message }}
+  </p>
+  <p *ngIf="isSucess" class="error" style="color: green">
+    {{ message }}
+  </p>
+</div>
+<div  mat-dialog-actions>
+  <button style="margin-right: auto; margin-left: auto" mat-button mat-dialog-close>Close</button>
+  <button style="margin-right: auto; margin-left: auto" mat-button cdkFocusInitial (click)="submit()">Load Data</button>
 </div>
 
