--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,7 +4,7 @@
     <mat-card-content>
       <form [formGroup]="form" (submit)="submit()">
         <p>
-          <mat-form-field appera>
+          <mat-form-field>
             <input class="loginInput" type="text" matInput placeholder="Username" formControlName="username">
           </mat-form-field>
         </p>
@@ -24,6 +24,7 @@
 
         <div class="button">
           <button type="submit" color="primary" mat-raised-button>Register</button>
+          <a mat-raised-button routerLink="/home">BACK TO MENU</a>
         </div>
 
       </form>
