--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,14 @@
 <button type="submit" style="margin-top: 5px; alignment: right" color="secondary" (click)="getAllData()" mat-raised-button>Reload</button>
+<button style="margin-top: 5px; float: right" color="secondary" (click)="changePassword()" mat-raised-button>Change Password</button>
 <h1 style="text-align: center">YOUR USER DATA</h1>
 <table style="margin-left: auto; margin-right: auto">
   <tr style="text-align: left">
     <th>Username</th>
     <th>Email</th>
-    <th>Roles</th>
   </tr>
   <tr *ngIf="currentUser">
     <td>{{currentUser.username}}</td>
     <td>{{currentUser.email}}</td>
-    <td>{{currentUser.roles}}</td>
   </tr>
 </table>
 <div *ngIf="isAdmin">
@@ -18,12 +17,10 @@
   <tr style="text-align: left">
     <th>Username</th>
     <th>Email</th>
-    <th>Roles</th>
   </tr>
   <tr *ngFor="let user of users">
     <td>{{user.username}}</td>
     <td>{{user.email}}</td>
-    <td>{{user.roles.toString()}}</td>
   </tr>
 </table>
 </div>
